--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "org.jetbrains.kotlin.plugin.allopen" version "1.3.72"
     id "com.github.johnrengelman.shadow" version "5.2.0"
     id "application"
+    id 'com.google.protobuf' version '0.8.12'
 }
 
 version "0.1"
@@ -40,6 +41,9 @@ dependencies {
     implementation("io.micronaut:micronaut-security-jwt")
     implementation("io.micronaut.data:micronaut-data-jdbc:$micronautDataVersion")
     implementation("io.micronaut.configuration:micronaut-security-oauth2")
+    implementation("io.micronaut.grpc:micronaut-grpc-server-runtime:$micronautGrpcVersion")
+    implementation("io.micronaut.grpc:micronaut-grpc-client-runtime:$micronautGrpcVersion")
+    implementation("io.grpc:grpc-kotlin-stub:${grpcKotlinVersion}")
     runtimeOnly("ch.qos.logback:logback-classic:1.2.3")
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8")
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
@@ -93,5 +97,26 @@ tasks.withType(JavaExec) {
     jvmArgs('-Dmicronaut.io.watch.enabled=true')
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/grpckt'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
+}
 
-
+protobuf {
+    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
+    plugins {
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
+        grpckt { artifact = "io.grpc:protoc-gen-grpc-kotlin:${grpcKotlinVersion}" }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+            grpckt {}
+        }
+    }
+}
