--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation("io.micronaut.grpc:micronaut-grpc-client-runtime:$micronautGrpcVersion")
     implementation("io.grpc:grpc-kotlin-stub:${grpcKotlinVersion}")
     runtimeOnly("ch.qos.logback:logback-classic:1.2.3")
-    runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8")
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.11.1'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.14'
     runtimeOnly("io.micronaut.configuration:micronaut-jdbc-hikari")
